--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.5'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.2.2'
+	implementation 'org.springframework.security:spring-security-crypto:6.0.1'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+	implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+	implementation 'org.springframework.security:spring-security-config:6.2.2'
 
 }
 
