--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -1,27 +1,27 @@
-name: Maven Build and Test
 
+name: test
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
-  test_build:
+  test_buid:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: Clean and Build Project
+      - name: Clean Project
         run: |
-          mvn clean install
+          chmod +x gradlew
+          ./gradlew clean
+      - name: Build Project
+        run: |
+          chmod +x gradlew
+          ./gradlew build
